force-app/main/default/objects/KimbleOne__ForecastStatus__c/KimbleOne__ForecastStatus__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Forecast Status</label>
    <nameField>
        <label>Forecast Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Statuses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>