force-app/main/default/objects/KimbleOne__ForecastStatus__c/fields/KimbleOne__ContingencyPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContingencyPercentage__c</fullName>
    <label>Contingency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>