force-app/main/default/objects/KimbleOne__ForecastStatus__c/fields/KimbleOne__IsDelivery__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies to Delivery</label>
    <type>Checkbox</type>
</CustomField>