force-app/main/default/objects/KimbleOne__ForecastStatus__c/fields/KimbleOne__Probability__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Probability__c</fullName>
    <label>Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>