force-app/main/default/objects/KimbleOne__ForecastStatus__c/fields/KimbleOne__ProbabilityCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProbabilityCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Probability Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ForecastStatusProbabilityCode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Forecast Statuses</relationshipLabel>
    <relationshipName>ForecastStatuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>