force-app/main/default/objects/KimbleOne__ForecastStatus__c/fields/KimbleOne__StyleClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StyleClass__c</fullName>
    <label>Style Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>