force-app/main/default/objects/KimbleOne__ForecastStatus__c/validationRules/KimbleOne__ContingencyPercentageMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ContingencyPercentageMandatory</fullName>
    <active>true</active>
    <description>Contingency Percentage is Mandatory if Is Delivery.</description>
    <errorConditionFormula>KimbleOne__IsDelivery__c &amp;&amp; ISBLANK(KimbleOne__ContingencyPercentage__c)</errorConditionFormula>
    <errorMessage>Contingency must be entered if Forecast Status applies to Delivery</errorMessage>
</ValidationRule>