force-app/main/default/objects/KimbleOne__ForecastStatus__c/validationRules/KimbleOne__ProbabilityCodeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ProbabilityCodeMandatory</fullName>
    <active>true</active>
    <description>Probability Code is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ProbabilityCode__c)</errorConditionFormula>
    <errorMessage>Probability Code must be entered</errorMessage>
</ValidationRule>