force-app/main/default/objects/KimbleOne__ForecastStatus__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ProbabilityCode__c</columns>
    <columns>KimbleOne__Probability__c</columns>
    <columns>KimbleOne__IsDelivery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>